--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
                 <option value="10">10</option>
                 <!-- fill in the rest of the values-->
             </select>  <br/>
-            Interest : <span id="result"></span><br>
-
+            
             <button onclick="compute()">Compute Interest</button>
             <span id="result">
 
-            </span>
+            </span> <br/>
+            <footer>
+                &#169; This Calculator belongs to --Albano dos Santos--
+            </footer>
         </div>
     </body>
-    <footer>
-        &#169; This Calculator belongs to --Albano dos Santos
-    </footer>
 </html>
